--- a/src/Views/Login/Login.module.css
+++ b/src/Views/Login/Login.module.css
@@ -17,7 +17,7 @@
     margin-top: 5px;
   }
   .wrapper {
-    height: 100vh;
+    height: 100%;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -47,7 +47,7 @@
   }
   
   .form-wrapper {
-    width: 400px;
+    /* width: 400px; */
     margin: 20px;
     display: flex;
     flex-direction: column;
